--- a/startbootstrap-creative-gh-pages/index.html
+++ b/startbootstrap-creative-gh-pages/index.html
@@ -27,8 +27,8 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto my-2 my-lg-0">
                         <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
+                        
+                        <li class="nav-item"><a class="nav-link" href="#portfolio">Experience</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
                     </ul>
                 </div>
@@ -54,7 +54,9 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-8 text-center">
-                        <h2 class="text-white mt-0">We've got what you need!</h2>hai, aku pute! aku suka belajar hal baru terutama di bidang teknologi, desain, dan kreativitas. lewat website ini, aku ingin berbagi karya, pengalaman, dan perjalanan belajarku. tujuanku sederhana—terus berkembang dan menginspirasi orang lain lewat hal hal kecil yang aku kerjakan.</p>
+                        <h2 class="text-white mt-0">We've got what you need!</h2>Halo, saya Putri! Saya lahir pada tanggal 7 Agusuts 2008 sekarang saya duduk di bangku kelas 2 di SMK Informatika Sumedang. 
+                        Saya suka belajar hal baru terutama di bidang teknologi, desain, dan kreativitas, saya juga aktif di dalam organisasi Osis, MPK dan Paskibra. Lewat website ini, Saya ingin berbagi karya, pengalaman, dan belajar banyal hal baru. tu
+                        juan saya sederhana terus berkembang dan menginspirasi orang lain lewat hal hal kecil yang saya kerjakan.</p>
                         <a class="btn btn-light btn-xl" href="#services">Get Started!</a>
                     </div>
                         <p class="text-white-75 mb-4">
@@ -79,6 +81,7 @@
                             <div class="mb-2"><i class="bi-laptop fs-1 text-primary"></i></div>
                             <h3 class="h4 mb-2">location</h3>
                             <p class="text-muted mb-0">Desa Ciherang RT04 RW02</p>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7922.360424596473!2d107.87360023862948!3d-6.868997328164807!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e68d08e5f683d55%3A0x3098714336d36002!2sPonyo%C2%AE%20Resto%20%26%20Wedding%20-%20Ciherang%20Sumedang!5e0!3m2!1sen!2sid!4v1764207150589!5m2!1sen!2sid" width="200" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
@@ -92,7 +95,7 @@
                         <div class="mt-5">
                             <div class="mb-2"><i class="bi-heart fs-1 text-primary"></i></div>
                             <h3 class="h4 mb-2">Cita cita</h3>
-                            <p class="text-muted mb-0">Koki, Dokter, Polisi, Guru, Pilot, Developt
+                            <p class="text-muted mb-0"> Guru
                             </p>
                         </div>
                     </div>
@@ -104,56 +107,56 @@
             <div class="container-fluid p-0">
                 <div class="row g-0">
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/1.jpg" title="Koki   ">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/1.jpg" title="Paskibra   ">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="..." />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Cita Cita </div>
+                                <div class="project-category text-white-50">Pengalaman</div>
+                                <div class="project-name">Menjadi Ketua Eskul paskibra di sekolah  </div>
                             </div>
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/2.jpg" title="Dokter">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/2.jpg" title="Osis">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/2.jpg" alt="..." />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Cita Cita</div>
+                                <div class="project-category text-white-50">Pengalaman</div>
+                                <div class="project-name">Menjadi anggota osis semasa SMP</div>
                             </div>
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/3.jpg" title="Polisi">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/3.jpg" title="MPK">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/3.jpg" alt="..." />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Cita Cita </div>
+                                <div class="project-category text-white-50">Pengalaman</div>
+                                <div class="project-name">Menjadi Anggota MPK di Sekolah</div>
                             </div>
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/4.jpg" title="Guru">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/4.jpg" title="Paskibra">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/4.jpg" alt="..." />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Cita Cita</div>
+                                <div class="project-category text-white-50">Pengalaman</div>
+                                <div class="project-name">Mengikuti Seleksi Calon paskibra</div>
                             </div>
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/5.jpg" title="Developt">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/5.jpg" title="Paskibra">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/5.jpg" alt="..." />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Cita Cita</div>
+                                <div class="project-category text-white-50">Pengalaman</div>
+                                <div class="project-name">Menjadi Ketua Pelaksana</div>
                             </div>
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/6.jpg" title="Pilot">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/6.jpg" title="Pramuka">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="..." />
                             <div class="portfolio-box-caption p-3">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Cita Cita</div>
+                                <div class="project-category text-white-50">Pengalaman</div>
+                                <div class="project-name"></div>
                             </div>
                         </a>
                     </div>
@@ -231,14 +234,14 @@
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-4 text-center mb-5 mb-lg-0">
                         <i class="bi-phone fs-2 mb-3 text-muted"></i>
-                        <div>+1 (555) 123-4567</div>
+                        <div>085995988018887</div>
                     </div>
                 </div>
             </div>
         </section>
         <!-- Footer-->
         <footer class="bg-light py-5">
-            <div class="container px-4 px-lg-5"><div class="small text-center text-muted">Copyright &copy; 2023 - Company Name</div></div>
+            <div class="container px-4 px-lg-5"><div class="small text-center text-muted">Copyright &copy; 2025 - Putri`s Pengusaha</div></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
